--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,8 @@ dependencies {
 
     // This dependency is used by the application.
     implementation libs.guava
+
+    implementation 'org.fusesource.jansi:jansi:2.4.0'
 }
 
 // Apply a specific Java toolchain to ease working on different environments.
