Fixes #61 - Ajout de la dependance pour la librairie Apache Commons CLI

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,8 @@ dependencies {
     implementation libs.guava
 
     implementation 'org.fusesource.jansi:jansi:2.4.0'
+
+    implementation 'commons-cli:commons-cli:1.4'
 }
 
 // Apply a specific Java toolchain to ease working on different environments.
