--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,7 @@
 plugins {
     // Apply the application plugin to add support for building a CLI application in Java.
     id 'application'
+    id 'com.github.johnrengelman.shadow' version '8.1.1'
 }
 
 repositories {
@@ -28,7 +29,7 @@ dependencies {
     implementation 'org.apache.logging.log4j:log4j-core:2.20.0'
     implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.20.0'
     implementation 'org.fusesource.jansi:jansi:2.4.0'
-    implementation 'commons-cli:commons-cli:1.4'
+    implementation 'commons-cli:commons-cli:1.9.0'
 
 }
 
@@ -41,10 +42,17 @@ java {
 
 application {
     // Define the main class for the application.
-    mainClass = 'lensjudge.App'
+    mainClass = 'lensjudge.LensJudge'
 }
 
 tasks.named('test') {
     // Use JUnit Platform for unit tests.
     useJUnitPlatform()
+}
+
+shadowJar {
+    archiveBaseName.set('lensjudge-shadow') // Nom du fichier JAR
+    archiveVersion.set('1.0')               // Version
+    archiveClassifier.set('all')            // Ajoute 'all' au nom pour indiquer qu’il est autonome
+    destinationDirectory = file("$buildDir/libs") // Répertoire de destination
 }
